test: 소나큐브 issue 제거